--- a/_posts/2014-11-05-codeat.md
+++ b/_posts/2014-11-05-codeat.md
@@ -18,6 +18,8 @@ gfhgfhf
 
 # 测试一下中文
 
+<link rel="stylesheet" href="/assets/themes/twitter/css/pygments.css">
+
 {% highlight java %}
 public class HelloWorld {
     public static void main(String args[]) {
