--- a/_posts/test-code/2014-11-05-codeat.md
+++ b/_posts/test-code/2014-11-05-codeat.md
@@ -6,7 +6,7 @@ tags : [test]
 ---
 {% include JB/setup %}
 
-<link href="{{ ASSET_PATH }}/css/pygments.css" rel="stylesheet">
+<link href="/assets/themes/twitter/css/pygments.css" rel="stylesheet">
 
 # enddfdfdfdf
 
