--- a/_posts/test-code/2014-11-05-codeat.md
+++ b/_posts/test-code/2014-11-05-codeat.md
@@ -20,7 +20,7 @@ gfhgfhf
 
 # 测试一下中文
 
-```c
+{% highlight c %}
 /* hello world demo */
 #include <stdio.h>
 int main(int argc, char **argv)
@@ -28,4 +28,4 @@ int main(int argc, char **argv)
     printf("Hello, World!\n");
     return 0;
 }
-```
+{% endhighlight %}
