--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -9,16 +9,20 @@ tags: [git, github, 每天系列]
 
 ##2014-11-08-git的相关概念
 
-git是由Linus Torvalds设计的一个版本控制系统，git原本只适。。。
-下载[msysgit](http://msysgit.github.io)
-安装。。。略
-配置
-	{% highlight c %}
-	$git config --global user.name "github_username"
-	$git config --global user.email "github_registered_email"
-	{% endhighlight %}
-初始化
-	{% highlight c %}
-	$cd myGitRepo
-	$git init
-	{% endhighlight %}
+###git是由Linus Torvalds设计的一个版本控制系统，git原本只适于Linux/Unix平台，但git日趋成熟，已经向windows用户提供了msysgit和TortoiseGit
+
+###下载[msysgit](http://msysgit.github.io)
+
+###安装。。。略
+
+###配置
+
+>$git config --global user.name "github_username"
+>$git config --global user.email "github_registered_email"
+
+
+###初始化
+
+>$cd myGitRepo
+>$git init
+
