--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -6,7 +6,7 @@ tags: [git, github, 笔记]
 ---
 {% include JB/setup %}
 
-##2014-11-08-git的相关准备
+###2014-11-08-git的相关准备
 
 git是由Linus Torvalds设计的一个版本控制系统，git原本只适于Linux/Unix平台，但git日趋成熟，已经向windows用户提供了msysgit和TortoiseGit。。。
 
