--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -5,23 +5,34 @@ category: git
 tags: [git, github, 笔记]
 ---
 {% include JB/setup %}
+###2014-11-09-git-bash中加入自己喜欢的编辑器
+
+  新建一个文件名为npp（我添加的是notepad++），编辑文件内容如下
+{% highlight %}
+#!/bin/sh
+exec /d/Notepad++/notepad++.exe "$@" &
+{% endhighlight %}
+  这样一来在git-bash输入如下就能编辑文本了
+{% highlight java %}
+$cpp filename
+{% endhighlight %}
 
 ###2014-11-08-git的相关准备
 
-git是由Linus Torvalds设计的一个版本控制系统，git原本只适于Linux/Unix平台，但git日趋成熟，已经向windows用户提供了msysgit和TortoiseGit。。。
+  git是由Linus Torvalds设计的一个版本控制系统，git原本只适于Linux/Unix平台，但git日趋成熟，已经向windows用户提供了msysgit和TortoiseGit。。。
 
-下载[msysgit](http://msysgit.github.io)
+  下载[msysgit](http://msysgit.github.io)
 
-安装。。。略
+  安装。。。略
 
-配置
+  配置
 
 {% highlight css %}
 $git config --global user.name "github_username"
 $git config --global user.email "github_registered_email"
 {% endhighlight %}
 
-初始化
+  初始化
 
 {% highlight css %}
 $cd myGitRepo
