--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -8,7 +8,7 @@ tags: [git, github, 笔记]
 ###2014-11-09-git-bash中加入自己喜欢的编辑器
 
   新建一个文件名为npp（我添加的是notepad++），编辑文件内容如下
-{% highlight %}
+{% highlight java%}
 #!/bin/sh
 exec /d/Notepad++/notepad++.exe "$@" &
 {% endhighlight %}
