--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -9,7 +9,7 @@ tags: [git, github, 笔记]
 
   新建一个文件名为npp（我添加的是notepad++），编辑文件内容如下
 {% highlight java%}
-#!/bin/sh
+\#!/bin/sh
 exec /d/Notepad++/notepad++.exe "$@" &
 {% endhighlight %}
   这样一来在git-bash输入如下就能编辑文本了
