--- a/_posts/git_note/2014-11-08-git-note.md
+++ b/_posts/git_note/2014-11-08-git-note.md
@@ -14,7 +14,7 @@ exec /d/Notepad++/notepad++.exe "$@" &
 {% endhighlight %}
   这样一来在git-bash输入如下就能编辑文本了
 {% highlight java %}
-$cpp filename
+$npp filename
 {% endhighlight %}
 
 ###2014-11-08-git的相关准备
